--- a/nuestraescuelita.org/v2/css/nicdark_style.css
+++ b/nuestraescuelita.org/v2/css/nicdark_style.css
@@ -134,6 +134,13 @@ a{ text-decoration: none; color: #868585; }
 /*pre*/
 pre{ overflow: auto; float: left; width: 100%; margin:0px; padding: 0px; }
 pre p{ font-family: monospace; font-size: 13px; line-height: 22px; }
+
+.anchor{
+  display: block;
+  position:relative;
+  top: -75px; /*same height as header*/
+  visibility: hidden;
+}
 /*END NICDARKTEXT*/
 
 
