--- a/nuestraescuelita.org/v2/css/nicdark_style.css
+++ b/nuestraescuelita.org/v2/css/nicdark_style.css
@@ -86,6 +86,7 @@ body.nicdark_boxed_img{ background-image: url(../img/img4.jpg) !important; backg
 .nicdark_width_percentage20{ width: 20% !important; }
 .nicdark_width_percentage25{ width: 25% !important; }
 .nicdark_width_percentage30{ width: 30% !important; }
+.nicdark_width_percentage33{ width: 33% !important; }
 .nicdark_width_percentage40{ width: 40% !important; }
 .nicdark_width_percentage50{ width: 50% !important; }
 .nicdark_width_percentage60{ width: 60% !important; }
